@@ -4,7 +4,7 @@
 # prep_gtk2_modules.sh - Postinstall commands for GTK+ 2.x modules
 #
 # Part of cygport - Cygwin packaging application
-# Copyright (C) 2006 Yaakov Selkowitz
+# Copyright (C) 2006, 2009 Yaakov Selkowitz
 # Provided by the Cygwin Ports project <http://sourceware.org/cygwinports/>
 #
 # cygport is free software: you can redistribute it and/or modify
@@ -27,21 +27,6 @@ set -e
 
 export PKG_CONFIG_PATH="${B}:${PKG_CONFIG_PATH}"
 GTK_API=$(pkg-config --variable=gtk_binary_version gtk+-x11-2.0)
-
-# Pango modules
-if [ -d ${D}/usr/lib/pango ]
-then
-	dodir /etc/postinstall
-	cat >> ${D}/etc/postinstall/${PN}.sh <<-_EOF
-		if [ -x /usr/bin/pango-querymodules.exe ]
-		then
-		    /usr/bin/mkdir -p /etc/pango
-		    /usr/bin/chmod 777 /etc/pango
-		    /usr/bin/pango-querymodules > /etc/pango/pango.modules
-		fi
-
-		_EOF
-fi
 
 # Gdk-Pixbuf loaders
 if [ -d ${D}/usr/lib/gtk-2.0/${GTK_API}/loaders ]
