@@ -1,3 +1,8 @@
+2009-Mar-17  yselkowitz
+
+	* bin/prep_gtk2_modules.sh: Remove pango module handling, as only
+	pango itself needs it.
+
 2009-Mar-11  yselkowitz
 
 	* lib/git.cygclass (git_fetch): Honour .gitmodules.
